# advection

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  continuity.cpp  navier_stokes.cpp  plasma.cpp  requirements.txt  temp_navier_stokes.cpp  temp_plasma.cpp
cmake/: InstallJSONCPP.cmake
